WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
181743
REGRESSION (
r224780
): Text stroke not applied to video captions.
https://bugs.webkit.org/show_bug.cgi?id=181743
Summary
REGRESSION (r224780): Text stroke not applied to video captions.
Per Arne Vollan
Reported
2018-01-17 08:46:34 PST
After
r224780
, text stroke is no longer visible when rendering video subtitles.
Attachments
Patch
(2.42 KB, patch)
2018-01-17 08:55 PST
,
Per Arne Vollan
no flags
Details
Formatted Diff
Diff
Patch
(5.62 KB, patch)
2018-01-17 09:48 PST
,
Per Arne Vollan
no flags
Details
Formatted Diff
Diff
Patch
(5.69 KB, patch)
2018-01-17 10:41 PST
,
Per Arne Vollan
no flags
Details
Formatted Diff
Diff
Patch
(8.31 KB, patch)
2018-01-17 16:50 PST
,
Per Arne Vollan
simon.fraser
: review+
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Per Arne Vollan
Comment 1
2018-01-17 08:55:01 PST
Created
attachment 331498
[details]
Patch
EWS Watchlist
Comment 2
2018-01-17 08:56:43 PST
Attachment 331498
[details]
did not pass style-queue: ERROR: Source/WebCore/ChangeLog:8: You should remove the 'No new tests' and either add and list tests, or explain why no new tests were possible. [changelog/nonewtests] [5] Total errors found: 1 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
Per Arne Vollan
Comment 3
2018-01-17 09:48:34 PST
Created
attachment 331503
[details]
Patch
Per Arne Vollan
Comment 4
2018-01-17 10:06:13 PST
<
rdar://problem/35874338
>
Per Arne Vollan
Comment 5
2018-01-17 10:41:19 PST
Created
attachment 331513
[details]
Patch
Simon Fraser (smfr)
Comment 6
2018-01-17 11:15:54 PST
Comment on
attachment 331513
[details]
Patch Can you make a test that checks that video captions have the correct stroke? If we'd had one, we would have detected this regression.
Per Arne Vollan
Comment 7
2018-01-17 11:44:50 PST
(In reply to Simon Fraser (smfr) from
comment #6
)
> Comment on
attachment 331513
[details]
> Patch > > Can you make a test that checks that video captions have the correct stroke? > If we'd had one, we would have detected this regression.
I will look into that. Thanks for reviewing, Simon!
Per Arne Vollan
Comment 8
2018-01-17 16:50:11 PST
Created
attachment 331561
[details]
Patch
Simon Fraser (smfr)
Comment 9
2018-01-17 17:06:11 PST
Comment on
attachment 331561
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=331561&action=review
r=me but please make sure the tests pass.
> LayoutTests/media/track/track-css-visible-stroke-expected.html:4 > + <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
Is this necessary?
> LayoutTests/media/track/track-css-visible-stroke-expected.html:16 > + > + </style> > +
You can remove these blank lines.
> LayoutTests/media/track/track-css-visible-stroke.html:19 > + background-color: white;
I've been using gray for the color (to make their role more clear).
> LayoutTests/media/track/track-css-visible-stroke.html:33 > + consoleWrite("Test that style to all cues is applied correctly.");
This isn't testing "style to all cues", but just stroke-color.
Per Arne Vollan
Comment 10
2018-01-18 08:15:46 PST
(In reply to Simon Fraser (smfr) from
comment #9
)
> Comment on
attachment 331561
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=331561&action=review
> > r=me but please make sure the tests pass. > > > LayoutTests/media/track/track-css-visible-stroke-expected.html:4 > > + <meta http-equiv="Content-Type" content="text/html; charset=utf-8" /> > > Is this necessary? > > > LayoutTests/media/track/track-css-visible-stroke-expected.html:16 > > + > > + </style> > > + > > You can remove these blank lines. > > > LayoutTests/media/track/track-css-visible-stroke.html:19 > > + background-color: white; > > I've been using gray for the color (to make their role more clear). > > > LayoutTests/media/track/track-css-visible-stroke.html:33 > > + consoleWrite("Test that style to all cues is applied correctly."); > > This isn't testing "style to all cues", but just stroke-color.
Thanks for reviewing!
Per Arne Vollan
Comment 11
2018-01-18 08:16:18 PST
Committed
r227141
: <
https://trac.webkit.org/changeset/227141/webkit
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug