REGRESSION (r224780): Text stroke not applied to video captions. https://bugs.webkit.org/show_bug.cgi?id=181743 <rdar://problem/35874338>

Reviewed by Simon Fraser.

Source/WebCore:

Tests: media/track/track-css-visible-stroke-expected.html
       media/track/track-css-visible-stroke.html

After r224780, it is no longer possible to mix text stroke styles with webkit
legacy text stroke styles.

* css/StyleResolver.cpp:
(WebCore::isValidCueStyleProperty):
* page/CaptionUserPreferencesMediaAF.cpp:
(WebCore::CaptionUserPreferencesMediaAF::captionsTextEdgeCSS const):

LayoutTests:

* media/track/track-css-stroke-cues-expected.txt:
* media/track/track-css-stroke-cues.html:
* media/track/track-css-visible-stroke-expected.html: Added.
* media/track/track-css-visible-stroke.html: Added.



Canonical link: https://commits.webkit.org/197627@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@227141 268f45cc-cd09-0410-ab3c-d52691b4dbfc